# langfuse-freeze

./: .gitignore  .pre-commit-config.yaml  .tool-versions  .yamlfmt  README.md  pyproject.toml  ruff.toml
.github/workflows/: publish.yml  test.yml
src/langfuse_freeze/: __init__.py  cli.py  client.py  main.py
tests/: __init__.py  conftest.py  test_bootstrap.py  test_main.py
tests/e2e/: test_integration.py
tests/resources/: _create_cassette.py
tests/unit/: test_backcompatibility.py  test_bootstrap.py  test_cli.py  test_client.py  test_main.py
